--- a/test.scss
+++ b/test.scss
@@ -1,11 +1,12 @@
-@include mixin();
+@include mixin(10px, ghjgjh 'ghj');
 @include another_mixin();
 
 #an_id_selector {
 	-browser-specific: property;
 	height: 10px;
 	background-image: url('somewhere');
-	@include mixin_inside_block();
+	@include mixin-inside-block(10px, something 'ghjgh' #45f rgb(210, 100, 20));
+	@include another-mixin;
 }
 
 /*comment*/
